webhead.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: webhead
spec:
  replicas: 1
  selector:
    matchLabels:
      run: webhead
  template:
    metadata:
      labels:
        run: webhead
    spec:
      containers:
        - image: nginx
          name: webhead
          ports:
            - containerPort: 80
            protocol: TCP
      nodeSelector:
        name: worker2
